feat(*): added services and screens Added item add screens upload files feat

--- a/eshop_manager_app/android/app/src/main/AndroidManifest.xml
+++ b/eshop_manager_app/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     package="ru.maxmorev.eshop.manager.app">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="app"
