--- a/eshop_manager_app/pubspec.yaml
+++ b/eshop_manager_app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_spinkit: ^4.1.2
   intl: ^0.16.1
   json_annotation: ^3.0.1
+  file_picker: ^1.9.0+1
 
 dev_dependencies:
   flutter_test:
