--- a/eshop_manager_app/pubspec.yaml
+++ b/eshop_manager_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.16.1
   json_annotation: ^3.0.1
   file_picker: ^1.9.0+1
+  quiver: ^2.1.3
 
 dev_dependencies:
   flutter_test:
