--- a/eshop_manager_app/pubspec.yaml
+++ b/eshop_manager_app/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   geolocator: ^3.0.1
-  http: ^0.12.0+4
+  http: ^0.12.2
   flutter_spinkit: ^4.1.2
   intl: ^0.16.1
   json_annotation: ^3.0.1
-  file_picker: ^1.9.0+1
+  file_picker_cross: ^4.2.2
   quiver: ^2.1.3
 
 dev_dependencies:
